@@ -4,6 +4,7 @@ New in master
 Features
 --------
 
+* Shortcode to escape to the template language (Issue #1227)
 * Added link to raw file in listings (Issue #1995)
 * New NO_DOCUTILS_TITLE_TRANSFORM (Issue #2382)
 * Update options of chart directive to Pygal 2.2.3
